k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP 
  ports:
    - port: 8080      
      targetPort: 8080 
      protocol: TCP
  selector:
    app: backend
